<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sharp Rewards</string>
    <string name="login_title">Login to Sharp Rewards</string>
    <string name="signup_title">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="display_name_hint">Display Name</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="play_game">Play Flash Hustle</string>
    <string name="skill_streak">Skill Streak</string>
    <string name="wallet">Wallet</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit_idea">Submit Idea</string>
    <string name="start_game">Start Game</string>
    <string name="next_question">Next Question</string>
    <string name="submit">Submit</string>
    <string name="redeem">Redeem Points</string>
</resources>
